# talknexus

./: .gitignore  LICENSE  README.md  navegation.py  navigation.py  package-lock.json  package.json  project.toml  pyproject.toml  requirements.txt  styles.css
.devcontainer/: devcontainer.json
config/: __init__.py  constants.py  settings.py
config/data/: embeddings_models.json  ollama_models.json
core/: __init__.py  conversation.py  ollama_client.py  rag_engine.py
core/persistence/: __init__.py  conversation_store.py  experiment_store.py
public/: index.html
safe-ai/: package-lock.json
safe-ai/src/: App.css  App.js
schema/: ollama_models_db.py  streamhandler.py
src/: App.css  App.js  index.css  navigation.py
src/components/: Environment.css  Environment.js  Ethics.css  Ethics.js  Home.css  Home.js  Involve.js  Mental.js  Sources.css  Sources.js  involve.css  mental.css
src/graphs/: confusion.py
src/schema/: conversation_history.py  ollama_models_db.py  streamhandler.py
src/st_pages/: ai_chatbot.py  chaperone.py  dataset.json  few_shot.json  re_prompt.txt  results.txt  results_deepseek_1_5b.txt  results_deepseek_7b.txt  results_llama3_2.txt  results_marco_01.txt  results_qwen3_4b.txt  results_tulu3_8b.txt  structured_out.json  sys_prompt.txt
st_pages/: ai_chatbot.py  home.py  model_management.py  rag_chat.py
ui/: __init__.py
ui/components/: __init__.py  chat.py  session_state.py  sidebar.py
ui/pages/: __init__.py  ai_chatbot.py  home.py  model_management.py  rag_chat.py
utils/: __init__.py  formatters.py  stream_handler.py
(+6 files in other folders)
